--- a/index.html
+++ b/index.html
@@ -1,40 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>React with Tailwind Single Page</title>
-  <!-- Tailwind CSS CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <!-- React and ReactDOM CDN -->
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-</head>
-<body class="bg-gradient-to-br from-blue-500 to-purple-600 min-h-screen flex items-center justify-center">
-  <div id="root"></div>
-
-  <script type="text/javascript">
-    const e = React.createElement;
-
-    function App() {
-      return e(
-        "div",
-        { className: "bg-white p-8 rounded-lg shadow-lg max-w-md text-center" },
-        e("h1", { className: "text-3xl font-bold text-gray-800 mb-4" }, "Welcome to Tailwind CSS with React!"),
-        e("p", { className: "text-gray-600 mb-6" }, "This is a simple single-page example using Tailwind for styling."),
-        e(
-          "button",
-          {
-            className: "bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition",
-            onClick: () => alert("Button clicked!")
-          },
-          "Click Me"
-        )
-      );
-    }
-
-    const root = ReactDOM.createRoot(document.getElementById("root"));
-    root.render(e(App));
-  </script>
-</body>
-</html>
+asd
