--- a/index.html
+++ b/index.html
@@ -1,47 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>React Tailwind Counter</title>
-  <!-- Tailwind CSS CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <!-- React and ReactDOM CDN -->
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-  <!-- Babel for JSX support -->
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-</head>
-<body class="bg-gradient-to-br from-blue-500 to-purple-600 min-h-screen flex items-center justify-center">
-  <div id="root"></div>
-
-  <script type="text/babel">
-    function Counter() {
-      const [count, setCount] = React.useState(0);
-
-      return (
-        <div className="bg-white p-8 rounded-lg shadow-lg max-w-xs text-center">
-          <h1 className="text-3xl font-bold text-gray-800 mb-6">Counter: {count}</h1>
-          <div className="flex justify-center space-x-4">
-            <button
-              onClick={() => setCount(count - 1)}
-              className="bg-red-500 text-white font-semibold px-4 py-2 rounded hover:bg-red-600 transition"
-            >
-              Decrement
-            </button>
-            <button
-              onClick={() => setCount(count + 1)}
-              className="bg-green-500 text-white font-semibold px-4 py-2 rounded hover:bg-green-600 transition"
-            >
-              Increment
-            </button>
-          </div>
-        </div>
-      );
-    }
-
-    const root = ReactDOM.createRoot(document.getElementById("root"));
-    root.render(<Counter />);
-  </script>
-</body>
-</html>
+asd
