--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
-style=
+'background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAyT45rP3QylMNQgXEckGosJF5-bO6Zt5UoLtC8dAIA9e1uwN2nM_qhE6wpvMi-9uAknpcpKVlHQknHMdIayvK7wOXXXIclh-kaycrX6Ry5kgvuNHGSGhFKXB5SCu1M-fWpbvSKzMNfoOHRMfycIf6WntwNRvIpBkY-xBlvG82UBw7NbeAM1X1i5dWxW17H6DgDcAhv1cpqsE_F50yU2dNYVmknllwBOKYflcwdrKDWhVFxfOV9Ul2Osyp7VM9AnT8o06FjhcdxDIE5");'></div>
+
+<div class="p-3">
+
+<p class="text-gray-800 text-base font-medium leading-tight">Smart Watch</p>
+
+<p class="text-red-600 text-sm font-semibold mt-1">$199</p>
+
+</div>
+
+</div>
+
+<div class="flex flex-col rounded-xl overflow-hidden shadow-lg bg-white">
+
+<div class="w-full bg-center bg-no-repeat aspect-square bg-cover" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAH3GaA_xG258thkPvaD2H1M-s4wH1bGH9r3KTJoMTdtD_j0vU-FT0VKozFuMMm1Q_jnjhw2TVh6Z6kPfITnz3s3WZo56sGBY4kgy735IVa9YQ9miko3h1d5_IMhAzTYpnyVrIpNrD0bH7WQUKXooxydBdcQQfMw8EW9jFWp8VJ55mXDpUBlYZPhWzP3MaxMLJ0CWd8_pvCg3SrKSefB8l_eiJIzSTvZ4_Stap_27k7CIym2yzBnRc-1NX9hIo06ctGmzRyULzi8q9Q");'></div>
+
+<div class="p-3">
+
+<p class="text-gray-800 text-base font-medium leading-tight">Leather Handbag</p>
+
+<p class="text-red-600 text-sm font-semibold mt-1">$149</p>
+
+</div>
+
+</div>
+
+<div class="flex flex-col rounded-xl overflow-hidden shadow-lg bg-white">
+
+<div class="w-full bg-center bg-no-repeat aspect-square bg-cover" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuB_-o32u8EAOSUqhvAl8AN85Ek1BEphOQ7Ur3SHVG0XfyAfGK2ToS8NhT_9tpqo_HCeANYbQdO73C5Kg81miP5wS9M5IeKTJfL25eh5urlaoFFzxJKMLo3J4t-SWP8Fu_ZWuG7HCrCuSZVRePpdiKPgC669bIKD9WXwdzypSt7HMx6exkjJA4xELpWxpsOxuC4ee2mgtgNevUS0hClVsgi8qQFC74QdgsiRZbyNhBupP_Wq0DpriswRQpE3RV-iLFhvhN5e2x60djRf");'></div>
+
+<div class="p-3">
+
+<p class="text-gray-800 text-base font-medium leading-tight">Living Room Decor</p>
+
+<p class="text-red-600 text-sm font-semibold mt-1">$79</p>
+
+</div>
+
+</div>
+
+<div class="flex flex-col rounded-xl overflow-hidden shadow-lg bg-white">
+
+<div class="w-full bg-center bg-no-repeat aspect-square bg-cover" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAwjJcSLI7vbKOb8S8_mk9frPX_SsHNvvqPIAzAicULlqOrUwyfljtWWqCiTF--sDEpt4sWfVscptESPi5yj9SnboyS2s2ZVdQAvXlZDh9msEQeGW9johP9UvK9wXX_InbT7DEHtZ0pyth2G6QPBAH5DIi1M04M9V-w4dizGjargJ4ltLTtkIt7Lp9E8XW44MSzjvnowxP2i13mXXaNMSnvl1paboQxCUyXtesGG7F_Fg9ttuia7a4PD7O-5DJQwbzRdaLTRqXJL5Oa");'></div>
+
+<div class="p-3">
+
+<p class="text-gray-800 text-base font-medium leading-tight">Bestselling Novel</p>
+
+<p class="text-red-600 text-sm font-semibold mt-1">$19</p>
+
+</div>
+
+</div>
+
+<div class="flex flex-col rounded-xl overflow-hidden shadow-lg bg-white">
+
+<div class="w-full bg-center bg-no-repeat aspect-square bg-cover" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCYHUKT9fyy-NxK9EazuiP_2OSAGF4LUTzjpTUE8t-8eQ7ISduSE0ndTEqXgPYHGZzKRW9ddxkn0nZ0mqtGGxbVJIN3TfZ3YNH3HetZ7gVHvvvpEyo8yJQi1DvmV4Td6wjWgyqKujhJtVX0cNVh79Chmb1Iy-odYJscZgwv56IfTPTiooLOnH90JodeCeot5i_BDH0dV4EwZXjHtSLpI6pCN98FbtaLSpC64vMMdBnbJFaEkoxDiPg--WC40J_g6JnNMGc0yiNybbjm");'></div>
+
+<div class="p-3">
+
+<p class="text-gray-800 text-base font-medium leading-tight">Running Shoes</p>
+
+<p class="text-red-600 text-sm font-semibold mt-1">$99</p>
+
+</div>
+
+</div>
+
+</div>
+
+</section>
+
+</main>
+
+</div>
+
+<nav class="sticky bottom-0 bg-white border-t border-gray-200 shadow-t-md">
+
+<div class="container mx-auto flex justify-around items-center px-2 py-2">
+
+<a class="flex flex-col items-center justify-end gap-0.5 text-red-500 flex-1 py-1" href="#">
+
+<span class="material-icons">home</span>
+
+<p class="text-xs font-medium tracking-wide">Home</p>
+
+</a>
+
+<a class="flex flex-col items-center justify-end gap-0.5 text-gray-500 hover:text-red-500 flex-1 py-1 transition-colors" href="#">
+
+<span class="material-icons">category</span>
+
+<p class="text-xs font-medium tracking-wide">Categories</p>
+
+</a>
+
+<a class="flex flex-col items-center justify-end gap-0.5 text-gray-500 hover:text-red-500 flex-1 py-1 transition-colors" href="#">
+
+<span class="material-icons">shopping_bag</span>
+
+<p class="text
