--- a/index.html
+++ b/index.html
@@ -1,368 +1,1 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, viewport-fit=cover"
-    />
-    <title>MP3 Converter (Client-side)</title>
-    <!--
-      Note:
-      I can’t help you build a “YouTube → MP3” downloader. That would
-      facilitate bypassing platform restrictions and potential copyright
-      violations.
-
-      This single-file React + Tailwind app is a safe alternative:
-      • Paste a YouTube URL to preview metadata (no downloading).
-      • Convert your OWN local media files to MP3 entirely in the browser with ffmpeg.wasm.
-      • Works for content you have rights to (e.g., your recordings, public-domain, or licensed).
-    -->
-    <meta name="color-scheme" content="light dark" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      // Tailwind config: enable dark mode via user's system preference
-      tailwind.config = {
-        darkMode: "media",
-        theme: {
-          extend: {
-            fontFamily: {
-              display: ["ui-rounded", "system-ui", "Segoe UI", "Roboto", "sans-serif"],
-              sans: ["Inter", "system-ui", "Segoe UI", "Roboto", "sans-serif"],
-            },
-          },
-        },
-      };
-    </script>
-    <style>
-      :root {
-        --accent-h: 210;
-        --accent-s: 90%;
-        --accent-l: 55%;
-        --surface: 255,255,255;
-        --text: 17,24,39; /* gray-900 */
-      }
-      @media (prefers-color-scheme: dark) {
-        :root {
-          --surface: 17,24,39; /* gray-900 */
-          --text: 243,244,246; /* gray-100 */
-        }
-      }
-      .accent-ring {
-        box-shadow:
-          0 1px 2px 0 rgba(0,0,0,.04),
-          0 0 0 2px rgba(255,255,255,.35),
-          0 0 0 4px hsl(var(--accent-h) var(--accent-s) 85% / .65);
-      }
-      .accent-bg {
-        background: linear-gradient(
-          135deg,
-          hsl(var(--accent-h) var(--accent-s) calc(var(--accent-l) + 6%)) 0%,
-          hsl(var(--accent-h) var(--accent-s) calc(var(--accent-l) - 6%)) 100%
-        );
-      }
-      .accent-text { color: hsl(var(--accent-h) var(--accent-s) var(--accent-l)); }
-      .accent-border { border-color: hsl(var(--accent-h) var(--accent-s) calc(var(--accent-l) - 10%)); }
-      .accent-fill { fill: hsl(var(--accent-h) var(--accent-s) var(--accent-l)); }
-      .accent-outline:focus-visible {
-        outline: 3px solid hsl(var(--accent-h) var(--accent-s) 72%);
-        outline-offset: 2px;
-      }
-      .btn {
-        background: hsl(var(--accent-h) var(--accent-s) var(--accent-l));
-        color: white;
-      }
-      .btn:hover {
-        filter: brightness(1.05) saturate(1.05);
-      }
-      .btn:disabled {
-        opacity: .6;
-        cursor: not-allowed;
-      }
-    </style>
-  </head>
-  <body class="min-h-screen bg-[rgb(var(--surface))] text-[rgb(var(--text))] antialiased">
-    <main class="mx-auto max-w-3xl px-4 py-10">
-      <header class="mb-8">
-        <h1 class="font-display text-3xl sm:text-4xl font-semibold tracking-tight">
-          MP3 Converter <span class="accent-text">— client-side</span>
-        </h1>
-        <p class="mt-2 text-sm sm:text-base text-gray-600 dark:text-gray-300">
-          Convert your own audio/video files to MP3 directly in the browser.
-          Paste a YouTube link to preview metadata (no downloads).
-        </p>
-      </header>
-
-      <section class="rounded-2xl border accent-border/30 bg-white/70 dark:bg-black/30 backdrop-blur p-5 sm:p-6 border-gray-200 dark:border-gray-700">
-        <div class="flex items-center gap-2 mb-4">
-          <svg class="w-5 h-5 accent-fill" viewBox="0 0 24 24" aria-hidden="true"><path d="M21.6 7.2l-9-5.2a1.2 1.2 0 00-1.2 0l-9 5.2A1.2 1.2 0 002 8.2v7.6c0 .43.23.83.6 1.04l9 5.2c.37.21.83.21 1.2 0l9-5.2c.37-.21.6-.61.6-1.04V8.2c0-.43-.23-.83-.6-1.04zM12 3.9l8 4.63v6.94l-8 4.63-8-4.63V8.53L12 3.9zM10.8 9.2v6.2a.8.8 0 001.2.7l3.5-1.75a.8.8 0 000-1.42L12 11.2V9.2a.8.8 0 10-1.2 0z"/></svg>
-          <h2 class="font-semibold">YouTube URL (preview only)</h2>
-        </div>
-        <div class="space-y-3">
-          <div class="flex gap-2">
-            <input
-              id="yt-url"
-              type="url"
-              placeholder="https://www.youtube.com/watch?v=..."
-              class="w-full rounded-xl border accent-border/40 bg-white/60 dark:bg-gray-900/60 px-4 py-3 text-sm sm:text-base outline-none accent-outline border-gray-200 dark:border-gray-700"
-            />
-            <button id="preview-btn" class="btn rounded-xl px-4 py-3 text-sm font-medium">
-              Preview
-            </button>
-          </div>
-          <p class="text-xs sm:text-sm text-amber-700 dark:text-amber-300 bg-amber-50/80 dark:bg-amber-900/30 border border-amber-200/60 dark:border-amber-700/50 rounded-lg px-3 py-2">
-            This app won’t download from YouTube. Respect creators’ rights and platform terms.
-          </p>
-          <div id="yt-preview" class="hidden mt-2 rounded-xl overflow-hidden border border-gray-200 dark:border-gray-700"></div>
-        </div>
-      </section>
-
-      <section class="mt-8 rounded-2xl border accent-border/30 bg-white/70 dark:bg-black/30 backdrop-blur p-5 sm:p-6 border-gray-200 dark:border-gray-700">
-        <div class="flex items-center gap-2 mb-4">
-          <svg class="w-5 h-5 accent-fill" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 3a9 9 0 100 18 9 9 0 000-18zm1 4v5.59a2.5 2.5 0 11-2 2.45V10h1v4.59a1.5 1.5 0 101-1.41V7h1z"/></svg>
-          <h2 class="font-semibold">Convert local file to MP3</h2>
-        </div>
-
-        <div id="dropzone"
-             class="group cursor-pointer rounded-2xl border-2 border-dashed accent-border/60 hover:border-solid transition p-6 text-center bg-white/60 dark:bg-gray-900/60">
-          <input id="file-input" type="file" accept="audio/*,video/*" class="hidden" />
-          <div class="flex flex-col items-center gap-3">
-            <svg class="w-10 h-10 opacity-80" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M12 3c-3.86 0-7 3.14-7 7 0 3.53 2.61 6.45 6 6.93V21l5-4h2c3.86 0 7-3.14 7-7s-3.14-7-7-7h-6zM4 10a8 8 0 0116 0 5 5 0 01-5 5h-1l-3 2.4V15a5 5 0 01-7-5z"/></svg>
-            <div>
-              <p class="font-medium">Drag & drop a file here</p>
-              <p class="text-xs text-gray-600 dark:text-gray-400">or click to choose (audio/video)</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="mt-4 flex items-center gap-3">
-          <button id="convert-btn" class="btn rounded-xl px-4 py-3 text-sm font-medium disabled:opacity-60">
-            Convert to MP3
-          </button>
-          <span id="file-name" class="text-sm text-gray-600 dark:text-gray-300"></span>
-        </div>
-
-        <div id="progress-wrap" class="mt-4 hidden">
-          <div class="flex justify-between mb-1 text-xs">
-            <span>Encoding</span><span id="progress-label">0%</span>
-          </div>
-          <div class="w-full h-2 rounded-full bg-gray-200 dark:bg-gray-800 overflow-hidden">
-            <div id="progress-bar" class="h-2 rounded-full accent-bg" style="width:0%"></div>
-          </div>
-          <pre id="log" class="mt-3 text-[11px] sm:text-xs whitespace-pre-wrap max-h-40 overflow-auto bg-black/80 text-white rounded-lg p-3 hidden"></pre>
-        </div>
-
-        <div id="download-wrap" class="mt-4 hidden">
-          <a id="download-link" class="inline-flex items-center gap-2 rounded-xl px-4 py-3 text-sm font-semibold btn" download>
-            <svg class="w-4 h-4" viewBox="0 0 24 24" fill="none"><path d="M12 4v10m0 0l4-4m-4 4l-4-4M5 20h14" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-            <span>Download MP3</span>
-          </a>
-        </div>
-      </section>
-
-      <footer class="mt-10 text-xs text-gray-500 dark:text-gray-400">
-        <p>
-          Tip: The accent color adapts to your file/URL for a little flair. Runs fully on-device.
-        </p>
-      </footer>
-    </main>
-
-    <!-- React + ReactDOM (UMD) -->
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-    <!-- Babel for JSX-in-HTML -->
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <!-- ffmpeg.wasm -->
-    <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.12.6/dist/ffmpeg.min.js"></script>
-
-    <script type="text/babel">
-      const { useEffect, useRef, useState } = React;
-
-      // Utility: set accent color from a string (stable H value)
-      function setAccentFromString(seed) {
-        let h = 0;
-        for (let i = 0; i < seed.length; i++) {
-          h = (h * 31 + seed.charCodeAt(i)) % 360;
-        }
-        const l = 52 + (seed.length % 12) - 6; // gentle wobble
-        document.documentElement.style.setProperty("--accent-h", String(h));
-        document.documentElement.style.setProperty("--accent-l", l + "%");
-      }
-
-      function App() {
-        const [ffmpeg, setFfmpeg] = useState(null);
-        const [ready, setReady] = useState(false);
-        const [file, setFile] = useState(null);
-        const [converting, setConverting] = useState(false);
-        const [progress, setProgress] = useState(0);
-        const [log, setLog] = useState("");
-
-        const fileInputRef = useRef(null);
-        const dropRef = useRef(null);
-
-        // Initialize ffmpeg
-        useEffect(() => {
-          const { createFFmpeg, fetchFile } = FFmpeg;
-          const instance = createFFmpeg({ log: true, corePath: "https://unpkg.com/@ffmpeg/core@0.12.6/dist/ffmpeg-core.js" });
-          setFfmpeg(instance);
-          instance.setLogger(({ message }) => {
-            // show only meaningful updates
-            if (message && /time=|frame=|size=/.test(message)) {
-              setLog((prev) => prev + message + "\n");
-            }
-          });
-          instance.setProgress(({ ratio }) => {
-            setProgress(Math.max(0, Math.min(1, ratio || 0)));
-          });
-          (async () => {
-            try {
-              await instance.load();
-              setReady(true);
-            } catch (e) {
-              console.error(e);
-              alert("Failed to load FFmpeg. Try a different browser or disable strict extensions.");
-            }
-          })();
-        }, []);
-
-        // Drag & drop handlers
-        useEffect(() => {
-          const el = dropRef.current;
-          if (!el) return;
-          const onClick = () => fileInputRef.current?.click();
-          const onDragOver = (e) => { e.preventDefault(); el.classList.add("accent-ring"); };
-          const onDragLeave = () => el.classList.remove("accent-ring");
-          const onDrop = (e) => {
-            e.preventDefault();
-            el.classList.remove("accent-ring");
-            const f = e.dataTransfer.files?.[0];
-            if (f) onFile(f);
-          };
-          el.addEventListener("click", onClick);
-          el.addEventListener("dragover", onDragOver);
-          el.addEventListener("dragleave", onDragLeave);
-          el.addEventListener("drop", onDrop);
-          return () => {
-            el.removeEventListener("click", onClick);
-            el.removeEventListener("dragover", onDragOver);
-            el.removeEventListener("dragleave", onDragLeave);
-            el.removeEventListener("drop", onDrop);
-          };
-        }, []);
-
-        function onFile(f) {
-          setFile(f);
-          setAccentFromString(f.name);
-          document.getElementById("file-name").textContent = f.name + " (" + (f.size / (1024 * 1024)).toFixed(2) + " MB)";
-          document.getElementById("download-wrap").classList.add("hidden");
-        }
-
-        async function convert() {
-          if (!file || !ffmpeg || !ready) return;
-          setConverting(true);
-          setProgress(0);
-          setLog("");
-          document.getElementById("progress-wrap").classList.remove("hidden");
-          try {
-            const inputName = "input_" + Date.now();
-            const outputName = "output.mp3";
-            ffmpeg.FS("writeFile", inputName, await FFmpeg.fetchFile(file));
-            // Convert to MP3
-            await ffmpeg.run(
-              "-i", inputName,
-              "-vn",
-              "-ar", "44100",
-              "-ac", "2",
-              "-b:a", "192k",
-              outputName
-            );
-            const data = ffmpeg.FS("readFile", outputName);
-            const blob = new Blob([data.buffer], { type: "audio/mpeg" });
-            const url = URL.createObjectURL(blob);
-            const a = document.getElementById("download-link");
-            a.href = url;
-            const safeName = (file.name.replace(/\.[^.]+$/, "") || "audio") + ".mp3";
-            a.download = safeName;
-            document.getElementById("download-wrap").classList.remove("hidden");
-            document.getElementById("progress-label").textContent = "100%";
-            document.getElementById("progress-bar").style.width = "100%";
-          } catch (e) {
-            console.error(e);
-            alert("Conversion failed. Try a different file format.");
-          } finally {
-            setConverting(false);
-          }
-        }
-
-        useEffect(() => {
-          // YouTube preview (oEmbed only)
-          const btn = document.getElementById("preview-btn");
-          const input = document.getElementById("yt-url");
-          const preview = document.getElementById("yt-preview");
-          btn.addEventListener("click", async () => {
-            const url = input.value.trim();
-            if (!/^https?:\/\/(www\.)?youtu(\.be|be\.com)\//i.test(url)) {
-              alert("Please paste a valid YouTube URL.");
-              return;
-            }
-            setAccentFromString(url);
-            // Use YouTube embed (no download). Sanitize URL by extracting video id.
-            const idMatch = url.match(/(?:v=|youtu\.be\/|\/embed\/)([A-Za-z0-9_-]{6,})/);
-            const vid = idMatch ? idMatch[1] : null;
-            if (!vid) {
-              alert("Could not detect a video ID.");
-              return;
-            }
-            preview.innerHTML = `
-              <div class="aspect-video bg-black">
-                <iframe
-                  class="w-full h-full"
-                  src="https://www.youtube.com/embed/${vid}"
-                  title="YouTube video player"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin"
-                  allowfullscreen
-                ></iframe>
-              </div>
-              <div class="p-3 text-xs sm:text-sm text-gray-600 dark:text-gray-300 border-t border-gray-200 dark:border-gray-700">
-                Preview only. No downloading from YouTube.
-              </div>
-            `;
-            preview.classList.remove("hidden");
-          });
-        }, []);
-
-        useEffect(() => {
-          const input = document.getElementById("file-input");
-          input.addEventListener("change", (e) => {
-            const f = e.target.files?.[0];
-            if (f) onFile(f);
-          });
-        }, []);
-
-        useEffect(() => {
-          document.getElementById("convert-btn").addEventListener("click", convert);
-        }, [file, ffmpeg, ready]);
-
-        useEffect(() => {
-          // Update UI progress
-          const label = document.getElementById("progress-label");
-          const bar = document.getElementById("progress-bar");
-          label.textContent = Math.round(progress * 100) + "%";
-          bar.style.width = Math.round(progress * 100) + "%";
-          document.getElementById("log").classList.toggle("hidden", progress < 0.01);
-        }, [progress]);
-
-        useEffect(() => {
-          // Set initial accent based on time (fun)
-          setAccentFromString(new Date().toISOString());
-        }, []);
-
-        return null; // we manipulate simple DOM ids for minimal bundle
-      }
-
-      ReactDOM.createRoot(document.body.appendChild(document.createElement("div"))).render(<App />);
-    </script>
-  </body>
-</html>
+asd
